[package]
name = "telegram-actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
actix-web = "4.4.1"
actix-rt="2.9.0"
openssl = {version = "0.10.63", features = ["vendored"]}